Vertical alignment corrections in history view

--- a/Server/Server/wwwroot/css/site.css
+++ b/Server/Server/wwwroot/css/site.css
@@ -51,9 +51,6 @@ table#history {
     border-collapse: collapse;
     border-spacing: 0;
 }
-table#history th {
-    padding-right:1em;
-}
 table#history path {
     stroke: black;
     stroke-width: 0.1;
@@ -66,4 +63,22 @@ table#history circle {
 }
 table#history circle.here {
     fill: #ffee11;
+}
+    table#history rect.even {
+        fill: #fafafa;
+    }
+table#history rect.odd {
+    fill: #FFF
+}
+    table#history td div.even {
+        background: #fafafa
+    }
+table#history td div.odd {
+    background: #FFF;
+}
+table#history td div {
+    padding-right: 1em;
+}
+table#history td {
+    vertical-align:top;
 }
